# rustraf

./: .gitignore  .versionrc.json  CHANGELOG.md  Cargo.toml  README.md  index.d.ts  index.js  package.json
.github/: publish_rustraf.sh
.github/workflows/: buildPublish.yml  release.yml  version.sh
__test__/: index.spec.mjs
npm/aarch64-apple-darwin/: package.json
npm/darwin-arm64/: README.md  package.json
npm/darwin-x64/: README.md  package.json
npm/linux-x64-gnu/: README.md  package.json
npm/win32-x64-msvc/: README.md  package.json
src/: lib.rs  remove.rs  remove_dir.rs  remove_file.rs  sum.rs
