[package]
edition = "2021"
name = "rustraf_core"
version = "1.6.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
futures = "0.3.25"
rm_rf = "0.6.2"
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.9.1", default-features = false, features = [
  "napi8",
  "serde-json",
  "async",
  "experimental",
  "latin1",
  "chrono_date",
] }
napi-derive = "2.9.1"

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
